--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/random-long-int/ece-webapp-PierreLouis-Kilan#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
 }
