--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
